<resources>
    <string name="app_name">每日健康</string>
    <string name="login">登录账号</string>
    <string name="yan_zheng">获取验证码</string>
    <string name="yi_fa_song">验证码已发送</string>
    <string name="deng_lu">直接登录</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_yan_zheng">请输入验证码</string>
    <string name="eat">今天吃什么</string>
    <string name="retu">退出</string>
    <string name="back">返回</string>
    <string name="emp"> </string>
    <string name="imag">水果图片</string>
    <string name="note">本软件仅供参考，具体饮食建议请咨询专业人士</string>
</resources>
